Fix some contrast

--- a/frontend/src/components/clause-list/style.css
+++ b/frontend/src/components/clause-list/style.css
@@ -7,13 +7,13 @@
 }
 
 .clause-list-item:hover {
-    background-color: rgb(218, 218, 218);
+    background-color: var(--kbar-8dp-color);
 }
 
 .clause-selected {
-    background-color: #d4bcff;
+    background-color: var(--kbar-selected-color);
 }
 
 .clause-selected:hover {
-    background-color: #d4bcff;
+    background-color: var(--kbar-selected-color);
 }
